--- a/backend/website/recommendation/training.ipynb
+++ b/backend/website/recommendation/training.ipynb
@@ -12,62 +12,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "3f62c7bdf8b0b036",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:31.765753062Z",
-     "start_time": "2024-01-19T16:03:29.968826767Z"
+     "end_time": "2024-01-25T13:50:49.618439700Z",
+     "start_time": "2024-01-25T13:50:47.427388600Z"
     }
    },
    "outputs": [],
    "source": [
     "import json\n",
-    "import random\n",
     "\n",
     "\n",
-    "with open('training_data_pairs.json', 'r') as f:\n",
-    "    loaded_data = json.load(f)\n",
-    "\n",
-    "train_data = loaded_data['train_data']\n",
-    "val_data = loaded_data['val_data']\n",
-    "test_data = loaded_data['test_data']"
+    "with open('training_data_pairs_shuffled.json', 'r') as f:\n",
+    "    loaded_data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'anchor': {'id': 556, 'features': 'Shooter Action Stealth achievements aggressivedooropening binkvideo bloody checkpoints classbased controversy corpse darkness death digitaldistribution dolbydigital e eaapp eagunclub famousquotes firstpersonshooter franchisereboot gamersgate gamescom gamesondemand goat guidedbyradio human infiniteammo invisiblewall killfeed killstreakreward lineargameplay maleprotagonist matchmaking mature melee mercenary military militaryjargon modern modernmilitary modernwarfare mouse mp multimonitorsupport newpurchaseincentives norespawn novintfalconsupport onsiteprocurement paxprime playstationtrophies politicalthriller polygonald prereleasepublictesting profanity realism realtimecombat samenamereboot scriptedevents snow soldier stealthcamouflage stealthkill steam tank teamdeathmatch terrorists throwingweapons unitedstatesarmy useablevehicles visionobstruction voiceacting voicechat war wasdmovement whitenoise xboxlive'}, 'game': {'id': 23823, 'features': '  '}, 'label': 0}\n"
+      "{'anchor': {'id': 21579, 'features': ' Sciencefiction actionadventure', 'description': 'A casual game for iPhone/iPod Touch. Collect ores, upgrade your ship, and blast robots! '}, 'game': {'id': 25300, 'features': 'Adventure Indie RoleplayingRPG Action Openworld Sciencefiction Survival actionadventure', 'description': 'Sky Break is an open-world game on a stormy abandoned planet filled with wild mechas. Learn to master this world and to hack the mechas if you want a chance to survive. Humanity is threatened. A deadly virus awoke, and it is spreading quickly. The particular flora of Arcania, a planet used to prepare humans for space colonization, may help in the creation of a cure. But it is now abandoned since working mechas turned against humans. A group of researchers is sent to this planet to find a solution. You are one of them. But as you arrived, your spaceship crashed…'}, 'label': 1}\n"
      ]
     }
    ],
    "source": [
-    "print(train_data[0])"
+    "print(loaded_data[0])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:31.766980934Z",
-     "start_time": "2024-01-19T16:03:31.718010918Z"
+     "end_time": "2024-01-25T13:50:49.635260900Z",
+     "start_time": "2024-01-25T13:50:49.622108400Z"
     }
    },
    "id": "565ecbc86c523c78"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "7a13c635e0a59be0",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:31.767891384Z",
-     "start_time": "2024-01-19T16:03:31.725643295Z"
+     "end_time": "2024-01-25T13:50:49.682177700Z",
+     "start_time": "2024-01-25T13:50:49.637426600Z"
     }
    },
    "outputs": [
@@ -75,67 +70,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train: 45767, val: 91535, test: 91536, total: 228838\n"
+      "length: 227686\n"
      ]
     }
    ],
    "source": [
-    "total_len = len(train_data) + len(val_data) + len(test_data)\n",
-    "print(f'train: {len(train_data)}, val: {len(val_data)}, test: {len(test_data)}, total: {total_len}')"
+    "print(f'length: {len(loaded_data)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# train_data = train_data[:int(len(train_data)/2)]\n",
-    "# val_data = val_data[:int(len(val_data)/2)]\n",
-    "# test_data = test_data[:int(len(test_data)/2)]\n",
-    "# \n",
-    "# total_len = len(train_data) + len(val_data) + len(test_data)\n",
-    "# print(f'train: {len(train_data)}, val: {len(val_data)}, test: {len(test_data)}, total: {total_len}')"
-   ],
+   "execution_count": 15,
+   "id": "6d25018201843bc3",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:31.768284887Z",
-     "start_time": "2024-01-19T16:03:31.751289701Z"
-    }
-   },
-   "id": "e7f7915fe31c91b9"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2d9dcc5f31f4cbe7",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:56.599329088Z",
-     "start_time": "2024-01-19T16:03:31.769607490Z"
+     "end_time": "2024-01-25T13:50:49.684254700Z",
+     "start_time": "2024-01-25T13:50:49.662636500Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-01-19 17:03:33.079553: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-19 17:03:33.501271: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-19 17:03:33.501379: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-19 17:03:33.580773: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-19 17:03:33.747398: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-19 17:03:33.749837: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-19 17:03:35.184418: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11  1 67 ...  0  0  0]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[15], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mtext\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Tokenizer\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msequence\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m pad_sequences\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mextract_features_and_labels\u001B[39m(data):\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'tensorflow'"
      ]
     }
    ],
@@ -150,21 +113,14 @@
     "    labels = [entry['label'] for entry in data]\n",
     "    return (features_anchor, features_game, labels)\n",
     "\n",
-    "\n",
-    "train_anchor, train_game, train_labels = extract_features_and_labels(train_data)\n",
-    "val_anchor, val_game, val_labels = extract_features_and_labels(val_data)\n",
-    "test_anchor, test_game, test_labels = extract_features_and_labels(test_data)\n",
+    "features_anchor, features_game, labels = extract_features_and_labels(loaded_data)\n",
     "\n",
     "tokenizer = Tokenizer()\n",
-    "tokenizer.fit_on_texts(train_anchor + train_game)\n",
+    "tokenizer.fit_on_texts(features_anchor + features_game)\n",
     "vocab_size = len(tokenizer.word_index) + 1\n",
     "max_sequence_length = max(\n",
-    "        max(len(seq) for seq in train_anchor),\n",
-    "        max(len(seq) for seq in train_game),\n",
-    "        max(len(seq) for seq in val_anchor),\n",
-    "        max(len(seq) for seq in val_game),\n",
-    "        max(len(seq) for seq in test_anchor),\n",
-    "        max(len(seq) for seq in test_game)\n",
+    "        max(len(seq) for seq in features_anchor),\n",
+    "        max(len(seq) for seq in features_game),\n",
     "    )\n",
     "\n",
     "def tokenize_and_pad(sequences):\n",
@@ -173,66 +129,48 @@
     "    return padded_sequences\n",
     "\n",
     "\n",
-    "train_anchor = tokenize_and_pad(train_anchor)\n",
-    "train_game = tokenize_and_pad(train_game)\n",
-    "\n",
-    "val_anchor = tokenize_and_pad(val_anchor)\n",
-    "val_game = tokenize_and_pad(val_game)\n",
-    "\n",
-    "test_anchor = tokenize_and_pad(test_anchor)\n",
-    "test_game = tokenize_and_pad(test_game)\n",
-    "\n",
-    "print(train_anchor[0])"
+    "features_anchor = tokenize_and_pad(features_anchor)\n",
+    "features_game = tokenize_and_pad(features_game)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_anchor, temp_anchor, train_game, temp_game, train_labels, temp_labels = train_test_split(\n",
+    "    features_anchor,\n",
+    "    features_game,\n",
+    "    labels,\n",
+    "    test_size=0.8, random_state=42)\n",
+    "val_anchor, test_anchor, val_game, test_game, val_labels, test_labels = train_test_split(\n",
+    "    temp_anchor,\n",
+    "    temp_game,\n",
+    "    temp_labels,\n",
+    "    test_size=0.5, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-25T13:50:49.698795600Z",
+     "start_time": "2024-01-25T13:50:49.694671800Z"
+    }
+   },
+   "id": "2d9dcc5f31f4cbe7",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a221ce5d48d0484c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:03:58.112222515Z",
-     "start_time": "2024-01-19T16:03:56.591729924Z"
+     "start_time": "2024-01-25T13:50:49.696720200Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-01-19 17:03:56.707298: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-01-19 17:03:56.767982: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2256] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-      "==================================================================================================\n",
-      " anchor (InputLayer)         [(None, 3786)]               0         []                            \n",
-      "                                                                                                  \n",
-      " game (InputLayer)           [(None, 3786)]               0         []                            \n",
-      "                                                                                                  \n",
-      " sequential (Sequential)     (None, 16)                   470576    ['anchor[0][0]',              \n",
-      "                                                                     'game[0][0]']                \n",
-      "                                                                                                  \n",
-      " dot (Dot)                   (None, 1)                    0         ['sequential[0][0]',          \n",
-      "                                                                     'sequential[1][0]']          \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 470576 (1.80 MB)\n",
-      "Trainable params: 470576 (1.80 MB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "__________________________________________________________________________________________________\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -240,7 +178,6 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "\n",
-    "# Define the Siamese network architecture\n",
     "def build_siamese_network(input_shape, vocab_size):\n",
     "    model = models.Sequential()\n",
     "    model.add(layers.Embedding(input_dim=vocab_size, output_dim=128, input_length=input_shape))\n",
@@ -279,25 +216,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "98f2544429f155fe",
+   "execution_count": null,
+   "id": "fbbdd9c982d2fac7",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T16:04:04.406559710Z",
-     "start_time": "2024-01-19T16:03:57.926577003Z"
+     "end_time": "2024-01-25T13:50:49.726946500Z",
+     "start_time": "2024-01-25T13:50:49.700860900Z"
     }
    },
    "outputs": [],
    "source": [
-    "train_anchor = np.array(train_anchor)\n",
-    "train_game = np.array(train_game)\n",
-    "train_labels = np.array(train_labels)\n",
-    "\n",
-    "val_anchor = np.array(val_anchor)\n",
-    "val_game = np.array(val_game)\n",
-    "val_labels = np.array(val_labels)"
+    "# train_anchor = np.array(train_anchor)\n",
+    "# train_game = np.array(train_game)\n",
+    "# train_labels = np.array(train_labels)\n",
+    "# \n",
+    "# val_anchor = np.array(val_anchor)\n",
+    "# val_game = np.array(val_game)\n",
+    "# val_labels = np.array(val_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.702996900Z"
+    }
+   },
+   "id": "98f2544429f155fe",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -305,42 +257,22 @@
    "id": "cf9f1817c9dee6a0",
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-01-19T16:10:40.313628455Z"
+     "start_time": "2024-01-25T13:50:49.705070700Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "358/358 [==============================] - 4758s 13s/step - loss: 0.5656 - accuracy: 0.7710 - val_loss: 3.3600 - val_accuracy: 0.7796\n",
-      "Epoch 2/10\n",
-      "358/358 [==============================] - 4230s 12s/step - loss: 0.5568 - accuracy: 0.7761 - val_loss: 3.3607 - val_accuracy: 0.7796\n",
-      "Epoch 3/10\n",
-      "358/358 [==============================] - 4228s 12s/step - loss: 0.5534 - accuracy: 0.7776 - val_loss: 3.3607 - val_accuracy: 0.7796\n",
-      "Epoch 4/10\n",
-      "358/358 [==============================] - 4635s 13s/step - loss: 0.5509 - accuracy: 0.7780 - val_loss: 3.3607 - val_accuracy: 0.7796\n",
-      "Epoch 5/10\n",
-      "358/358 [==============================] - 4229s 12s/step - loss: 0.5491 - accuracy: 0.7780 - val_loss: 3.3596 - val_accuracy: 0.7796\n",
-      "Epoch 6/10\n",
-      "239/358 [===================>..........] - ETA: 15:37 - loss: 0.5440 - accuracy: 0.7814"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Siamese model with your padded_sequences_anchor, padded_sequences_game, and labels\n",
     "siamese_model.fit(\n",
     "    [train_anchor, train_game],\n",
-    "    train_labels,\n",
+    "    np.array(train_labels),\n",
     "    epochs=10,\n",
     "    batch_size=128,\n",
     "    #validation_split=0.2,\n",
     "    use_multiprocessing=True,\n",
     "    workers=10,\n",
-    "    validation_data=([val_anchor, val_game], val_labels)\n",
+    "    validation_data=([val_anchor, val_game], np.array(val_labels))\n",
     ")"
    ]
   },
@@ -355,7 +287,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.707138100Z"
+    }
    },
    "id": "b8fcab060c86be1a"
   },
@@ -373,7 +307,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.709213400Z"
+    }
    },
    "id": "4cf6ebc8a2cf51f9"
   },
@@ -388,7 +324,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.711299500Z"
+    }
    },
    "id": "164b6acd23a6e1d5"
   },
@@ -405,7 +343,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.712365700Z"
+    }
    },
    "id": "d3648608926eccdb"
   },
@@ -418,7 +358,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-01-25T13:50:49.714417800Z"
+    }
    },
    "id": "4686ed6d1900a7df"
   }
