added removing stopwords from descriptions

--- a/backend/website/recommendation/data_preprocess.ipynb
+++ b/backend/website/recommendation/data_preprocess.ipynb
@@ -111,6 +111,10 @@
     }
    ],
    "source": [
+    "from nltk import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "import string\n",
+    "\n",
     "features_df = full_df.with_columns([\n",
     "    pl.col(\"summary\").fill_null(\"\").str.replace(\"no info|none|No info|None\", \"\"),\n",
     "    pl.col(\"storyline\").fill_null(\"\").str.replace(\"no info|none|No info|None\", \"\")\n",
@@ -125,6 +129,16 @@
     "    ).alias(\"description\")\n",
     ")\n",
     "features_df = features_df.drop([\"summary\", \"storyline\"])\n",
+    "\n",
+    "stopwords = stopwords.words('english') + string.punctuation\n",
+    "\n",
+    "def remove_stopwords(row):\n",
+    "    return \" \".join([i for i in word_tokenize(row.lower()) if i not in stopwords])\n",
+    "\n",
+    "features_df = features_df.with_columns([\n",
+    "        pl.col('description').map_elements(lambda row: remove_stopwords(row))\n",
+    "])\n",
+    "\n",
     "features_df = features_df.with_columns([\n",
     "    pl.when((pl.col('description').str.len_chars() == 1) | pl.col('description').str.starts_with(\"None None\"))\n",
     "    .then(None)\n",
