working on network

--- a/backend/website/recommendation/trainingv2.ipynb
+++ b/backend/website/recommendation/trainingv2.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "6b4131fae9ee0f8e",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.348929045Z",
-     "start_time": "2024-01-27T20:44:45.436974723Z"
+     "end_time": "2024-01-27T21:28:21.400440442Z",
+     "start_time": "2024-01-27T21:28:19.870920114Z"
     }
    },
    "outputs": [],
    "source": [
     "import json\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "with open('training_data_pairs_shuffled.json', 'r') as f:\n",
     "    loaded_data = json.load(f)"
@@ -46,26 +46,36 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.591951887Z",
-     "start_time": "2024-01-27T20:44:47.348836603Z"
+     "end_time": "2024-01-27T21:28:21.667228274Z",
+     "start_time": "2024-01-27T21:28:21.405802759Z"
     }
    },
    "id": "8ec492a8f1a9f042",
-   "execution_count": 50
+   "execution_count": 19
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Adventure Shooter Simulator Action Fantasy Stealth actionadventure blackjack bowandarrow crime darkness death difficultylevel ghosts immersive invisibility melee movingbodies pacifistplaythrough particlesystem pickpocketing polygonald potion realtimecombat shadowstealth singleplayeronly stealthkill steampunk swimming swordplay theft thief ultimate thief back tread softly make complex non-linear levels full loot steal guards outsmart improved enemy gadgets riveting story draw world thief metal place powerful technologies fanatical religions corruption game begins garrett continues life thief however betrayed fence ambushed early mission determines truart local sheriff hunting keepers take garrett hear prophecy metal ignores garrett leaves keepers informs truart hired kill gives garrett letter directs eavesdrop mechanist meeting garrett overhears truart father karras discussing conversion street people mindless servants wear masks emit vapor capable reducing nearby humans rust truart promises provide karras twenty victims servant project realizing karras recording words blackmail garrett steals recording safe deposit order coerce truart revealing employer.however garrett finds truart murdered estate evidence crime scene leads police officer mosley garrett sees mosley deliver suspicious letter carried portal wounded pagan garrett enters portal finds outside city follows pagan trail blood viktoria persuades garrett join mechanists lead viktoria infiltrates karras office learn cetus project inadvertently discovers karras giving servants city nobles garrett travels mechanist base find cetus project revealed submarine order locate kidnap high-ranking mechanist named brother cavador garrett stows away vehicle.after delivering cavador viktoria garrett steals servant mask learn mechanist technology called cultivator meanwhile karras hides inside mechanist cathedral preparation plan garrett viktoria learn cultivators inside servant masks emit vapor rust karras provided servants nobles gardens order apocalyptic chain reaction viktoria plans lure servants hermetically sealed mechanist cathedral karras activates masks garrett believes dangerous leaves viktoria goes cathedral alone dies filling plants garrett completes plan killing karras rust afterward garrett approached keeper explains karras scheme viktoria death prophesied garrett demands know rest keepers prophecies game ends\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(anchor_list[0]))"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.596726436Z",
-     "start_time": "2024-01-27T20:44:47.593085144Z"
+     "end_time": "2024-01-27T21:28:21.672630937Z",
+     "start_time": "2024-01-27T21:28:21.668894305Z"
     }
    },
    "id": "5bc3a5685688b05d",
-   "execution_count": 50
+   "execution_count": 20
   },
   {
    "cell_type": "code",
@@ -106,12 +116,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.601403273Z",
-     "start_time": "2024-01-27T20:44:47.596049874Z"
+     "end_time": "2024-01-27T21:28:21.679148701Z",
+     "start_time": "2024-01-27T21:28:21.673567961Z"
     }
    },
    "id": "7964e4fb229c0cde",
-   "execution_count": 51
+   "execution_count": 21
   },
   {
    "cell_type": "code",
@@ -125,12 +135,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.602002666Z",
-     "start_time": "2024-01-27T20:44:47.599055424Z"
+     "end_time": "2024-01-27T21:28:21.679270579Z",
+     "start_time": "2024-01-27T21:28:21.676783407Z"
     }
    },
    "id": "d24a6e3d1eed01f1",
-   "execution_count": 52
+   "execution_count": 22
   },
   {
    "cell_type": "code",
@@ -142,12 +152,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.603524307Z",
-     "start_time": "2024-01-27T20:44:47.601752573Z"
+     "end_time": "2024-01-27T21:28:21.684771451Z",
+     "start_time": "2024-01-27T21:28:21.680022580Z"
     }
    },
    "id": "a3868e4b64f15f33",
-   "execution_count": 53
+   "execution_count": 23
   },
   {
    "cell_type": "code",
@@ -169,12 +179,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.657912979Z",
-     "start_time": "2024-01-27T20:44:47.604287524Z"
+     "end_time": "2024-01-27T21:28:21.728525640Z",
+     "start_time": "2024-01-27T21:28:21.682432449Z"
     }
    },
    "id": "c3851a59b99d179c",
-   "execution_count": 54
+   "execution_count": 24
   },
   {
    "cell_type": "code",
@@ -187,12 +197,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.658477164Z",
-     "start_time": "2024-01-27T20:44:47.644977935Z"
+     "end_time": "2024-01-27T21:28:21.729189484Z",
+     "start_time": "2024-01-27T21:28:21.724443533Z"
     }
    },
    "id": "f41161b3ddb95e9a",
-   "execution_count": 55
+   "execution_count": 25
   },
   {
    "cell_type": "code",
@@ -207,12 +217,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.658929131Z",
-     "start_time": "2024-01-27T20:44:47.645055587Z"
+     "end_time": "2024-01-27T21:28:21.729722817Z",
+     "start_time": "2024-01-27T21:28:21.724580668Z"
     }
    },
    "id": "e16a4f928df6d7dd",
-   "execution_count": 56
+   "execution_count": 26
   },
   {
    "cell_type": "code",
@@ -223,12 +233,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.659385053Z",
-     "start_time": "2024-01-27T20:44:47.645105027Z"
+     "end_time": "2024-01-27T21:28:21.730246492Z",
+     "start_time": "2024-01-27T21:28:21.724665622Z"
     }
    },
    "id": "646d7d7a95681d6e",
-   "execution_count": 57
+   "execution_count": 27
   },
   {
    "cell_type": "code",
@@ -242,12 +252,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.659833104Z",
-     "start_time": "2024-01-27T20:44:47.645147561Z"
+     "end_time": "2024-01-27T21:28:21.730768434Z",
+     "start_time": "2024-01-27T21:28:21.724735498Z"
     }
    },
    "id": "46a9d288bd29cc22",
-   "execution_count": 58
+   "execution_count": 28
   },
   {
    "cell_type": "code",
@@ -259,12 +269,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.660327319Z",
-     "start_time": "2024-01-27T20:44:47.645190080Z"
+     "end_time": "2024-01-27T21:28:21.731279026Z",
+     "start_time": "2024-01-27T21:28:21.724809174Z"
     }
    },
    "id": "22d6def8afba43c9",
-   "execution_count": 59
+   "execution_count": 29
   },
   {
    "cell_type": "code",
@@ -272,84 +282,54 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "A_train, A_test, B_train, B_test, y_train, y_test = train_test_split(\n",
+    "train_anchor, temp_anchor, train_game, temp_game, train_labels, temp_labels = train_test_split(\n",
     "    anchor_list,\n",
     "    game_list,\n",
     "    label_list,\n",
-    "    test_size=0.9, random_state=42)"
+    "    test_size=0.8, random_state=42)\n",
+    "val_anchor, test_anchor, val_game, test_game, val_labels, test_labels = train_test_split(\n",
+    "    temp_anchor,\n",
+    "    temp_game,\n",
+    "    temp_labels,\n",
+    "    test_size=0.5, random_state=42)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.803967479Z",
-     "start_time": "2024-01-27T20:44:47.645270604Z"
+     "end_time": "2024-01-27T21:28:22.013729562Z",
+     "start_time": "2024-01-27T21:28:21.724917603Z"
     }
    },
    "id": "5195546eabbaca01",
-   "execution_count": 60
+   "execution_count": 30
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "MAX_LENGTH = max([len(d) for d in anchor_list + game_list])\n",
-    "NUM_CLASSES = 2\n",
+    "NUM_CLASSES = 1\n",
     "MAX_TOKENS = 10000"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:44:47.886036538Z",
-     "start_time": "2024-01-27T20:44:47.823569679Z"
+     "end_time": "2024-01-27T21:28:22.101046709Z",
+     "start_time": "2024-01-27T21:28:22.074401558Z"
     }
    },
    "id": "a4cf7420af199a22",
-   "execution_count": 61
+   "execution_count": 31
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"siamese_model\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-      "==================================================================================================\n",
-      " anchor (InputLayer)         [(None, 1)]                  0         []                            \n",
-      "                                                                                                  \n",
-      " game (InputLayer)           [(None, 1)]                  0         []                            \n",
-      "                                                                                                  \n",
-      " text_vectorization_5 (Text  (None, None)                 0         ['anchor[0][0]',              \n",
-      " Vectorization)                                                      'game[0][0]']                \n",
-      "                                                                                                  \n",
-      " embedding_2 (Embedding)     (None, None, 128)            1782272   ['text_vectorization_5[0][0]',\n",
-      "                                                                     'text_vectorization_5[1][0]']\n",
-      "                                                                                                  \n",
-      " lstm_1 (LSTM)               (None, 64)                   49408     ['embedding_2[0][0]',         \n",
-      "                                                                     'embedding_2[1][0]']         \n",
-      "                                                                                                  \n",
-      " concatenate_1 (Concatenate  (None, 128)                  0         ['lstm_1[0][0]',              \n",
-      " )                                                                   'lstm_1[1][0]']              \n",
-      "                                                                                                  \n",
-      " dense_1 (Dense)             (None, 2)                    258       ['concatenate_1[0][0]']       \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 1831938 (6.99 MB)\n",
-      "Trainable params: 1831938 (6.99 MB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models\n",
     "\n",
     "anchor_input = tf.keras.Input(shape=(1,), name='anchor', dtype=tf.string)\n",
     "game_input = tf.keras.Input(shape=(1,), name='game', dtype=tf.string)\n",
-    "\n",
     "\n",
     "vectorize_layer = layers.TextVectorization(max_tokens=MAX_TOKENS,) \n",
     "vectorize_layer.adapt(anchor_list)\n",
@@ -369,42 +349,43 @@
     "    [A_output, B_output], \n",
     "    axis=-1)\n",
     "\n",
-    "dense = layers.Dense(\n",
+    "dropout1 = layers.Dropout(0.5)(merged)\n",
+    "\n",
+    "dense1 = layers.Dense(\n",
+    "    units=NUM_CLASSES, \n",
+    "    activation='relu')(dropout1)\n",
+    "\n",
+    "dropout2 = layers.Dropout(0.5)(dense1)\n",
+    "\n",
+    "dense2 = layers.Dense(\n",
     "    units=NUM_CLASSES, \n",
     "    activation='softmax')\n",
-    "predictions = dense(merged)\n",
+    "\n",
+    "predictions = dense2(dropout2)\n",
     "\n",
     "siamese_model = models.Model(inputs=[anchor_input, game_input],\n",
     "                                  outputs=predictions, \n",
     "                                  name='siamese_model')\n",
     "\n",
     "siamese_model.compile(optimizer='adam', \n",
-    "                      loss='categorical_crossentropy', \n",
+    "                      loss='binary_crossentropy', \n",
     "                      metrics=['accuracy'])\n",
     "\n",
     "siamese_model.summary()"
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-01-27T20:48:50.407611253Z",
-     "start_time": "2024-01-27T20:48:25.987491725Z"
+     "start_time": "2024-01-27T21:28:22.143110880Z"
     }
    },
    "id": "626140ab8094fc1",
-   "execution_count": 64
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model to work.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.utils import plot_model\n",
     "\n",
@@ -412,33 +393,41 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-27T20:49:13.462918156Z",
-     "start_time": "2024-01-27T20:49:13.406938652Z"
-    }
+    "is_executing": true
    },
    "id": "9e0b1eb4eedea360",
-   "execution_count": 65
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "history = siamese_model.predict(anchor_list[:2])\n",
-    "\n",
-    "# history = siamese_model.fit(\n",
-    "#     [train_anchor, train_game],\n",
-    "#     np.array(train_labels),\n",
-    "#     epochs=10,\n",
-    "#     batch_size=64,\n",
-    "#     #validation_split=0.2,\n",
-    "#     use_multiprocessing=True,\n",
-    "#     workers=10,\n",
-    "#     validation_data=([val_anchor, val_game], np.array(val_labels))\n",
-    "# )"
+    "history = siamese_model.fit(\n",
+    "    [np.array(train_anchor), np.array(train_game)],\n",
+    "    np.array(train_labels),\n",
+    "    epochs=10,\n",
+    "    batch_size=128,\n",
+    "    use_multiprocessing=True,\n",
+    "    workers=10,\n",
+    "    validation_data=([np.array(val_anchor), np.array(val_game)], np.array(val_labels))\n",
+    ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
+   },
+   "id": "d285301147f0d730",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "siamese_model.save('siamese_model_v2.keras')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "29cfb02f6777637d",
    "execution_count": null
@@ -458,7 +447,8 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "b836adac00f38ebf",
    "execution_count": null
@@ -476,10 +466,38 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
+   },
+   "id": "22f249de41d81b79",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "test_loss, test_accuracy = siamese_model.evaluate(\n",
+    "    (test_anchor, test_game),\n",
+    "    np.array(test_labels),\n",
+    ")\n",
+    "print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy * 100:.2f}%')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "4619ea1618471ef4",
    "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   },
+   "id": "f1db094d662297a8"
   }
  ],
  "metadata": {
