--- a/backend/website/recommendation/data_preprocess.ipynb
+++ b/backend/website/recommendation/data_preprocess.ipynb
@@ -413,36 +413,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "shape: (5, 4)\n┌─────┬───────────────────────────────────┬───────────────────────────────────┬───────┐\n│ id  ┆ description                       ┆ features                          ┆ count │\n│ --- ┆ ---                               ┆ ---                               ┆ ---   │\n│ i64 ┆ str                               ┆ str                               ┆ i32   │\n╞═════╪═══════════════════════════════════╪═══════════════════════════════════╪═══════╡\n│ 1   ┆ ultimate thief back tread softly… ┆ Adventure Shooter Simulator Acti… ┆ 0     │\n│ 2   ┆ thief stealth dark sneak subterr… ┆ Adventure Simulator Action Fanta… ┆ 0     │\n│ 3   ┆ third thief series keeper missio… ┆ Adventure Shooter Simulator Acti… ┆ 0     │\n│ 4   ┆ rising tide fear city hatred eve… ┆ Adventure Shooter Action Sandbox… ┆ 0     │\n│ 5   ┆ gate fantasy video interplay ent… ┆ RoleplayingRPG Fantasy            ┆ 0     │\n└─────┴───────────────────────────────────┴───────────────────────────────────┴───────┘",
-      "text/html": "<div><style>\n.dataframe > thead > tr,\n.dataframe > tbody > tr {\n  text-align: right;\n  white-space: pre-wrap;\n}\n</style>\n<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>description</th><th>features</th><th>count</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>i32</td></tr></thead><tbody><tr><td>1</td><td>&quot;ultimate thief…</td><td>&quot;Adventure Shoo…</td><td>0</td></tr><tr><td>2</td><td>&quot;thief stealth …</td><td>&quot;Adventure Simu…</td><td>0</td></tr><tr><td>3</td><td>&quot;third thief se…</td><td>&quot;Adventure Shoo…</td><td>0</td></tr><tr><td>4</td><td>&quot;rising tide fe…</td><td>&quot;Adventure Shoo…</td><td>0</td></tr><tr><td>5</td><td>&quot;gate fantasy v…</td><td>&quot;RoleplayingRPG…</td><td>0</td></tr></tbody></table></div>"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# features_df = features_df.with_columns(pl.when(pl.col('id') == 1)\n",
-    "#                         .then(pl.col('count') + 1)\n",
-    "#                         .otherwise(pl.col('count'))\n",
-    "#                         .alias(\"count\"))\n",
-    "features_df.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T14:51:51.063673498Z",
-     "start_time": "2024-02-01T14:51:50.900594660Z"
-    }
-   },
-   "id": "3cc743e38d6693b5"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "outputs": [
     {
@@ -560,8 +530,7 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
-    "result_df = names_df.drop_nulls([\"similar_game_id\", \"name_right\"])\n",
-    "#result_df = result_df.group_by(\"name\", maintain_order=True).agg(pl.col(\"name_right\"))"
+    "result_df = names_df.drop_nulls([\"similar_game_id\", \"name_right\"])"
    ],
    "metadata": {
     "collapsed": false,
@@ -730,20 +699,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T14:52:06.650965662Z",
-     "start_time": "2024-02-01T14:52:06.612986398Z"
-    }
-   },
-   "id": "b942467884b75e24"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "outputs": [],
    "source": [
@@ -849,14 +804,7 @@
     "                                                .then(pl.col('count') + 1)\n",
     "                                                .otherwise(pl.col('count'))\n",
     "                                                .alias(\"count\"))\n",
-    "        count_negative += 1\n",
-    "    \n",
-    "    ## for triples\n",
-    "    # training_data.append({\n",
-    "    #     'anchor': anchor_game,\n",
-    "    #     'positive': similar_game,\n",
-    "    #     'negative': dissimilar_game\n",
-    "    # })"
+    "        count_negative += 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -909,63 +857,6 @@
     }
    },
    "id": "2fbc7cfe3cc47cab"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [],
-   "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "# \n",
-    "# train_data, temp_data = train_test_split(training_data, test_size=0.8, random_state=42)\n",
-    "# val_data, test_data = train_test_split(temp_data, test_size=0.5, random_state=42)\n",
-    "# \n",
-    "# data_to_file = {\n",
-    "#     'train_data': train_data,\n",
-    "#     'val_data': val_data,\n",
-    "#     'test_data': test_data\n",
-    "# }"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T15:03:03.820519087Z",
-     "start_time": "2024-02-01T15:03:03.371342046Z"
-    }
-   },
-   "id": "d5a55f35981dffb8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
-   "source": [
-    "# import json\n",
-    "# \n",
-    "# with open('training_data_pairs.json', 'w') as f:\n",
-    "#     json.dump(data_to_file, f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T15:03:20.664378508Z",
-     "start_time": "2024-02-01T15:03:03.823960871Z"
-    }
-   },
-   "id": "e158065d7f491184"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2024-02-01T14:52:33.184239617Z"
-    }
-   },
-   "id": "d0e56de45a28c456"
   }
  ],
  "metadata": {
